[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repomap-tool"
version = "1.0.0"
description = "Standalone advanced repository mapping tool with auto-regeneration on file changes"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Flonest"}
]
requires-python = ">=3.10"
dependencies = [
    "grep-ast>=0.9.0",
    "pygments>=2.15.0",
    "networkx>=3.0",
    "diskcache>=5.6.0",
    "watchdog>=3.0.0",
    "tree-sitter-language-pack>=0.13.0",
    "tree-sitter>=0.25.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "pathspec>=0.11.0",
]

[project.scripts]
repomap = "repomap_tool.cli:main"

[project.urls]
Homepage = "https://github.com/krishamaze/repomap-tool"
Repository = "https://github.com/krishamaze/repomap-tool"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"repomap_tool" = ["queries/**/*"]
